# quantitative-finance-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  research-firewall.yml
configs/: backtest.yaml  base.yaml  data.yaml  decision.yaml  features.yaml  law.yaml  panel.yaml  research.yaml  state.yaml
docs/: ADD.md  ADD_v8_7_1.md  PHASE0A_PROTOCOL_FREEZE.md  PHASE0B_01_BENCHMARK_LOCK.md  PHASE0B_02_BENCHMARK_RESULTS_TEMPLATE.md  PHASE0B_PREP_CHECKLIST.md  SRD_v8_7_1_final.md  SRD_v8_7_final.md  SRD_v8_8_final.md
docs/cycle_evaluation/: cycle_evaluation_protocol.md  formal_decision.md  label_construction_and_baselines.md
docs/new_hypotheses/: comparison_protocol.md  final_parallel_decision.md  hypothesis_A_prereg.md  hypothesis_B_prereg.md  hypothesis_C_prereg.md  hypothesis_D_prereg.md
docs/phase0b/: 01_benchmark_lock.md  02_benchmark_results_filled.md  02_benchmark_results_template.md  02_t5_reproduction_note.md  02_t5_source_parity_audit.md  02_t5_upstream_nan_trace.md  03_trigger_audit_prereg.md  03_trigger_audit_results_filled.md  04_bootstrap_sign_stability_plan.md  04_oos_and_sign_stability_prereg.md  05_phase0b_entry_check.md
docs/plans/: 2026-04-19-srd-v8-7-production-foundation.md
docs/rank_scale_hybrid/: 01_phase0a_archive.md  02_preregistration.md  03_results.md  04_final_decision.md  05_downstream_scale_bias_preregistration.md  06_downstream_scale_bias_decision.md  07_tail_family_preregistration.md  08_tail_family_decision.md  09_tail_family_failure_diagnosis.md  10_option1_close.md  11_option2a_preregistration.md  12_option2a_decision.md  13_research_line_closure.md
docs/research_closure/: fixed_t5_downstream_terminal_archive.md
research/: law_redesign_experiment.py
src/: __init__.py  config_types.py  engine_types.py  errors.py  sitecustomize.py
src/app/: __init__.py  backtest_runner.py  challenger_artifacts.py  cli.py  config_loader.py  env_validator.py  logging.py  output_serializer.py  panel_runner.py  panel_staged_acceptance.py  runtime_deps.py  train_runner.py  training_artifacts.py  weekly_runner.py
src/backtest/: __init__.py  acceptance.py  cluster_block_bootstrap.py  metrics.py  panel_acceptance.py  panel_metrics.py  walkforward.py
src/data_contract/: __init__.py  asset_registry.py  derived_series.py  fred_adapter.py  nasdaq_client.py  point_in_time.py  vintage_registry.py  yahoo_client.py
src/decision/: __init__.py  cycle_position.py  hysteresis.py  offense_abs.py  utility.py
src/features/: __init__.py  block_builder.py  panel_block_builder.py  pca.py  scaling.py
src/inference/: __init__.py  train.py  weekly.py
src/law/: __init__.py  linear_quantiles.py  panel_quantiles.py  panel_quantiles_r1.py  quantile_moments.py  student_t_location_scale.py  tail_extrapolation.py
src/research/: __init__.py  run_cycle_evaluation_protocol.py  run_downstream_scale_bias_experiment.py  run_joint_location_scale_experiment.py  run_new_hypotheses_parallel_experiment.py  run_phase0a_benchmark_delivery.py  run_phase0a_t5_2008_failure_audit.py  run_phase0a_t5_reproduction.py  run_phase0a_trigger_audit.py  run_phase0b_bootstrap_sign_stability.py  run_rank_scale_hybrid_experiment.py  run_tail_family_experiment.py  sidecar.py  t5_recovered_source.py
tests/: test_acceptance.py  test_antipatterns.py  test_asset_registry.py  test_backtest_metrics.py  test_backtest_runner_acceptance.py  test_cli.py  test_cluster_block_bootstrap.py  test_config_consistency.py  test_config_loader_runtime.py  test_cycle_evaluation_protocol.py  test_decision.py  test_derived_series.py  test_determinism.py  test_downstream_scale_bias_experiment.py  test_env_contract.py  test_feature_block.py  test_fp_purity.py  test_fred_adapter.py  test_hmm_degradation_guards.py  test_hmm_filtering.py  test_hmm_initialization.py  test_hmm_mstep.py  test_hmm_numerics.py  test_hmm_smoothing.py  test_inference_weekly.py  test_integration_smoke.py  test_joint_location_scale_experiment.py  test_layer_boundaries.py  test_linear_quantiles.py  test_nasdaq_client.py  test_new_hypotheses_parallel_experiment.py  test_output_schema_strict.py  test_output_serializer.py  test_panel_acceptance.py  test_panel_block_builder.py  test_panel_evaluator_contract.py  test_panel_isolation.py  test_panel_metrics.py  test_panel_quantiles.py  test_panel_runner.py  (+20 more)
tools/: check_agent_symlinks.py  combine_coverage.py  research_quantile_recalibration.py
(+18 files in other folders)
